# Espadin

./: CMakeLists.txt  Configure.cmake  about.cpp  access_token_accessor.hpp  calendar.hpp  capabilities.cpp  cjson_doc.cpp  cjson_doc.hpp  cjson_util.cpp  cjson_util.hpp  comment.cpp  comments_group.cpp  comments_group_impl.cpp  comments_group_impl.hpp  content_hints.cpp  content_restrictions.cpp  curl.cpp  curl.hpp  drive.cpp  drive_theme.cpp  exception.cpp  file.cpp  files_group.cpp  files_group_impl.cpp  files_group_impl.hpp  finalize.cpp  garbage_cleaner.cpp  garbage_cleaner.hpp  image_media_metadata.cpp  permission.cpp  permissions_group.cpp  permissions_group_impl.cpp  permissions_group_impl.hpp  replies_group.cpp  replies_group_impl.cpp  replies_group_impl.hpp  reply.cpp  request.cpp  request.hpp  resumable_file_upload.cpp  (+9 more)
include/espadin/: about.hpp  capabilities.hpp  comment.hpp  comments_group.hpp  content_hints.hpp  content_restrictions.hpp  drive.hpp  drive_theme.hpp  exception.hpp  export.hpp.in  file.hpp  files_group.hpp  finalize.hpp  image_media_metadata.hpp  permission.hpp  permissions_group.hpp  replies_group.hpp  reply.hpp  revision.hpp  revisions_group.hpp  shortcut_details.hpp  storage_quota.hpp  user.hpp  video_media_metadata.hpp
platform/posix/: calendar_posix.cpp
test/: CMakeLists.txt  about_test.cpp  base_test.cpp  base_test.hpp  comments_create_test.cpp  comments_delete_test.cpp  comments_get_test.cpp  comments_list_test.cpp  comments_update_test.cpp  files_copy_test.cpp  files_create_test.cpp  files_delete_test.cpp  files_export_test.cpp  files_generate_ids_test.cpp  files_get_test.cpp  files_list_test.cpp  files_update_test.cpp  harness.cpp  permissions_create_test.cpp  permissions_delete_test.cpp  permissions_get_test.cpp  permissions_list_test.cpp  permissions_update_test.cpp  replies_create_test.cpp  replies_delete_test.cpp  replies_get_test.cpp  replies_list_test.cpp  replies_update_test.cpp  revisions_get_test.cpp  revisions_list_test.cpp
