ADD_EXECUTABLE(unit-test
               about_test.cpp
               base_test.cpp
               base_test.hpp
               comments_create_test.cpp
               comments_delete_test.cpp
               comments_get_test.cpp
               comments_list_test.cpp
               comments_update_test.cpp
               files_copy_test.cpp
               files_create_test.cpp
               files_delete_test.cpp
               files_export_test.cpp
               files_generate_ids_test.cpp
               files_get_test.cpp
               files_list_test.cpp
               files_update_test.cpp
               harness.cpp
               permissions_create_test.cpp
               permissions_delete_test.cpp
               permissions_get_test.cpp
               permissions_list_test.cpp
               permissions_update_test.cpp
               replies_create_test.cpp
               replies_delete_test.cpp
               replies_get_test.cpp
               replies_list_test.cpp
               replies_update_test.cpp
               revisions_get_test.cpp
               revisions_list_test.cpp)
TARGET_LINK_LIBRARIES(unit-test espadin GTest::GTest)